--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chrisdruta/hack-2k19-server#readme",
   "dependencies": {
+    "base-64": "^0.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1"
