--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "base-64": "^0.1.0",
+    "plotly.js": "^1.43.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-plotly.js": "^2.2.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
